validator_derive_tests/tests/compile-fail/length/no_args.stderr
error: Invalid attribute #[validate(length(...))] on field `s`:

         = note: Validator `length` requires at least 1 argument
         = help: Add the argument `equal`, `min` or `max`

 --> tests/compile-fail/length/no_args.rs:6:5
  |
6 |     #[validate(length())]
  |     ^^^^^^^^^^^^^^^^^^^^^
